--- a/css/styles.css
+++ b/css/styles.css
@@ -48,12 +48,11 @@ body {
   line-height: 1.1;
   letter-spacing: 0.02em;
 }
-.nav-link:focus {
-  color: var(--accent-color);
-}
+.nav-link:focus,
 .nav-link:hover {
   color: var(--accent-color);
 }
+
 /* Адрес */
 .header-list {
   list-style: none;
@@ -64,12 +63,11 @@ body {
   letter-spacing: 0.02em;
   line-height: 1.1;
 }
-.header-link:focus {
-  color: var(--accent-color);
-}
+.header-link:focus,
 .header-link:hover {
   color: var(--accent-color);
 }
+ 
 /* основной контент */
 /* ГЕРОЙ */
 .hero {
@@ -88,6 +86,11 @@ body {
   color: var(--button-color);
   font-family: inherit;
   border: none;
+  
+}
+.primary-button:focus,
+.primary-button:hover{
+  color: var(--button-color);
 }
 /* Приемущества сайта */
 .main-list {
@@ -110,4 +113,33 @@ body {
 }
 .work-list {
   list-style: none;
+}
+/* Наша команда */
+.team{
+  background-color: #F5F4FA;
+}
+.team-title{
+
+font-size: 36px;
+line-height:1.2;
+text-align: center;
+letter-spacing: 0.03em;
+color: #212121;
+}
+.team-list{
+list-style: none;
+}
+.team-name{
+font-weight: 500;
+font-size: 16px;
+line-height:1.2;
+text-align: center;
+letter-spacing: 0.03em;
+color: var(--primary-text-color);
+}
+.team-text{
+font-size: 16px;
+line-height:1.2;
+text-align: center;
+letter-spacing: 0.03em;
 }
