--- a/css/styles.css
+++ b/css/styles.css
@@ -12,6 +12,7 @@
   --secondary-color: #2f303a;
   --button-color: #ffffff;
   --portfolio-title: #212121;
+  --primary-button-hover-focus:#188ce8;
 }
 body {
   background-color: var(--background-color);
@@ -98,7 +99,7 @@ body {
 }
 .primary-button:focus,
 .primary-button:hover {
-  color: var(--button-color);
+  color:var(--primary-button-hover-focus) ;
 }
 /* Приемущества сайта */
 .main-list {
@@ -126,6 +127,9 @@ body {
 .team {
   background-color: #f5f4fa;
 }
+.team-photo{
+  background-color: var(--background-color);
+}
 .team-title {
   font-size: 36px;
   line-height: 1.2;
@@ -135,6 +139,9 @@ body {
 }
 .team-list {
   list-style: none;
+}
+.worker{
+  background-color:var(--background-color)
 }
 .team-name {
   font-weight: 500;
@@ -172,8 +179,11 @@ body {
 }
 /* Страница портфолио */
 /* Секция кнопки */
+.projects-buttons{
+  list-style: none;
+}
 .secondary-button {
-  font-family: "Roboto";
+  font-family: inherit;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.6;
