--- a/css/styles.css
+++ b/css/styles.css
@@ -89,6 +89,8 @@ body {
   line-height: 1.4;
   text-align: center;
   letter-spacing: 0.06em;
+  text-transform: uppercase;
+
 }
 .primary-button {
   background-color: var(--accent-color);
