--- a/css/styles.css
+++ b/css/styles.css
@@ -98,6 +98,10 @@ body {
   font-family: inherit;
   border: none;
   cursor: pointer;
+  font-weight: 700;
+font-size: 16px;
+line-height:1.9;
+letter-spacing: 0.06em;
 }
 .primary-button:focus,
 .primary-button:hover {
